cmake_minimum_required(VERSION 2.8)
project( opencv )
find_package( OpenCV REQUIRED )
add_executable( main main.cpp vw_test.cpp )
#add_executable( vw_test vw_test.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g ")
set(CMAKE_BUILD_TYPE Debug)
#add_dependencies(main src/helper.cpp)
